Added mooncafe.registerFunctions and other useful utilities. Started graphics api.

--- a/test.html
+++ b/test.html
@@ -7,5 +7,8 @@
 	<!-- As does this -->
 	<body onload="mooncafe.init()">
 		<!-- Adding a canvas element is optional, because when mooncafe doesn't detect one it creates it. -->
+		<canvas id="mooncafe-canvas" width="800" height="600">
+			Mooncafe will override this with the default message :)
+		</canvas>
 	</body>
-</html>
+</html
