--- a/test.html
+++ b/test.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<!-- This needs to be here -->
+		<title>Mooncafe</title>
+		
 		<script src="mooncafe/core.js"></script>
 	</head>
 	
